<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.fragment.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <androidx.cardview.widget.CardView
                android:id="@+id/topBarCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.flaviofaria.kenburnsview.KenBurnsView
                        android:id="@+id/kbv_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:background="@drawable/placeholder"
                        android:contentDescription="@string/backdrop"
                        android:scaleType="centerCrop"
                        android:src="@color/placeholder" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:background="#6F000000"
                        android:contentDescription="@string/darken" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/mv_details_frag_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/dummyTitle"
                            android:textAlignment="textStart"
                            android:textColor="@color/gold"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/mv_details_frag_date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/roundedImageView" />

                        <TextView
                            android:id="@+id/mv_details_frag_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/dummyDate"
                            android:textAlignment="textStart"
                            android:textColor="@color/gold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/roundedImageView" />

                        <View
                            android:id="@+id/roundedImageView"
                            android:layout_width="120dp"
                            android:layout_height="180dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/mv_details_frag_poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:background="@drawable/placeholder"
                android:contentDescription="@string/poster"
                android:elevation="10dp"
                android:src="@color/placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/topBarCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView"
                app:riv_corner_radius="10dp" />

            <TextView
                android:id="@+id/mv_details_frag_title_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/overview"
                android:textColor="@color/gold"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mv_details_frag_poster" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/dividerBody"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mv_details_frag_title_overview"
                app:riv_corner_radius="2dp" />

            <TextView
                android:id="@+id/mv_details_frag_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/dummyOverview"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBody" />

            <TextView
                android:id="@+id/mv_details_frag_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/vote"
                android:textColor="@color/gold"
                app:layout_constraintStart_toEndOf="@+id/labelVote"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView" />

            <TextView
                android:id="@+id/labelVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Vote :"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintStart_toEndOf="@+id/mv_details_frag_poster"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView" />

            <TextView
                android:id="@+id/labelAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Avg. Vote :"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintStart_toEndOf="@+id/mv_details_frag_poster"
                app:layout_constraintTop_toBottomOf="@+id/labelVote" />

            <TextView
                android:id="@+id/mv_details_frag_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="avg_vote"
                android:textColor="@color/gold"
                app:layout_constraintStart_toEndOf="@+id/labelAverage"
                app:layout_constraintTop_toBottomOf="@+id/mv_details_frag_vote" />

            <TextView
                android:id="@+id/label_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Popularity :"
                android:textColor="@android:color/tertiary_text_light"
                app:layout_constraintStart_toEndOf="@+id/mv_details_frag_poster"
                app:layout_constraintTop_toBottomOf="@+id/labelAverage" />

            <TextView
                android:id="@+id/mv_details_frag_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="dummyPopularity"
                android:textColor="@color/gold"
                app:layout_constraintStart_toEndOf="@+id/label_popularity"
                app:layout_constraintTop_toBottomOf="@+id/mv_details_frag_avg" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>