<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_card_nowplaying"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card_nowplaying"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_cv_card_nowplaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000">

            <ImageView
                android:id="@+id/img_poster_card_nowplaying"
                android:layout_width="96dp"
                android:layout_height="112dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

            <TextView
                android:id="@+id/lbl_title_card_nowplaying"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/title"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/gold"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_poster_card_nowplaying"
                app:layout_constraintTop_toTopOf="@+id/img_poster_card_nowplaying" />

            <TextView
                android:id="@+id/lbl_overview_card_nowplaying"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/subtitle"
                android:maxLines="2"
                android:text="@string/subtitle"
                android:textColor="@color/gold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lbl_title_card_nowplaying"
                app:layout_constraintTop_toBottomOf="@+id/lbl_title_card_nowplaying" />

            <TextView
                android:id="@+id/lbl_releasedate_card_nowplaying"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/subtitle"
                android:text="@string/subtitle"
                android:textColor="@color/material_on_primary_emphasis_medium"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_poster_card_nowplaying"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lbl_overview_card_nowplaying" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>